redesigning and refining both css and the html of the practise site.

--- a/cheatsheet/index.html
+++ b/cheatsheet/index.html
@@ -1,108 +1,138 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Practice Makes Perfect</title>
-  <link rel="stylesheet" href="style.css" />
-</head>
-
-<body>
-  <div class="container">
-    <div class="row box1">
-      <h1>Hello World</h1>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, sit
-        beatae! Veritatis architecto quae quas hic odit, ullam tempore.
-        Eveniet temporibus enim perspiciatis quis nihil animi facilis
-        aspernatur molestias eaque! Lorem ipsum, dolor sit amet consectetur
-        adipisicing elit. Ab omnis error itaque, quod reiciendis blanditiis
-        voluptatum, esse quasi quisquam provident aspernatur magnam delectus
-        natus in! Delectus qui distinctio laudantium doloremque!
-        <hr />
-        Lorem ipsum
-        dolor sit amet consectetur adipisicing elit. Ea consequuntur
-        necessitatibus inventore commodi consectetur corporis consequatur odio
-        nostrum ut iste blanditiis, tempora dolore ad possimus, accusantium
-        neque praesentium laboriosam porro.
-        Lorem ipsum
-        dolor sit amet consectetur adipisicing elit. Ea consequuntur
-        necessitatibus inventore commodi consectetur corporis consequatur odio
-        nostrum ut iste blanditiis, tempora dolore ad possimus, accusantium
-        neque praesentium laboriosam porro.
-        Lorem ipsum
-        dolor sit amet consectetur adipisicing elit. Ea consequuntur
-        necessitatibus inventore commodi consectetur corporis consequatur odio
-        nostrum ut iste blanditiis, tempora dolore ad possimus, accusantium
-        neque praesentium laboriosam porro.
-      </p>
-    </div>
-    <div class="row box2">
-      <h1>Some Other World</h1>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat odit
-        tempore enim optio ex ut, harum rem, reiciendis quibusdam dicta nisi?
-        Sit ea quas voluptatibus laudantium optio error minima odit.
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat odit
-        tempore enim optio ex ut, harum rem, reiciendis quibusdam dicta nisi?
-        Sit ea quas voluptatibus laudantium optio error minima odit.
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat odit
-        tempore enim optio ex ut, harum rem, reiciendis quibusdam dicta nisi?
-        Sit ea quas voluptatibus laudantium optio error minima odit.
-      </p>
-    </div>
-    <div class="row category">
-      <h1>Categories</h1>
-      <ul>
-        <li><a href="#1">Category 1</a></li>
-        <li><a href="#2">Category 2</a></li>
-        <li><a href="#3">Category 3</a></li>
-        <li><a href="#4">Category 4</a></li>
-        <li><a href="#5">Category 5</a></li>
-      </ul>
-    </div>
-    <div class="row my-form">
-      <div class="form-group">
-        <label for="name">Name: </label>
-        <input type="text" id="name" />
-      </div>
-      <div class="form-group">
-        <label for="email">Email: </label>
-        <input type="email" id="email" />
-      </div>
-      <div class="form-group">
-        <label for="message">Message: </label>
-        <textarea name="message" id="message" cols="30" rows="10"></textarea>
-      </div>
-      <div class="form-group">
-        <input type="button" id="button" value="Submit" class="button" />
-      </div>
-    </div>
-    <div class="row">
-      <div class="three-container">
-        <div class="three-blocks">
-          <h3>Headings</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed vitae praesentium, incidunt velit, ad atque
-            exercitationem eos, vero ex deleniti et rem! Aliquid omnis sunt eum, aut vel suscipit quisquam.</p>
-        </div>
-
-        <div class="three-blocks">
-          <h3>Headings</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed vitae praesentium, incidunt velit, ad atque
-            exercitationem eos, vero ex deleniti et rem! Aliquid omnis sunt eum, aut vel suscipit quisquam.</p>
-        </div>
-
-        <div class="three-blocks">
-          <h3>Headings</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed vitae praesentium, incidunt velit, ad atque
-            exercitationem eos, vero ex deleniti et rem! Aliquid omnis sunt eum, aut vel suscipit quisquam.</p>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Practise Version 1</title>
+    <link rel="stylesheet" href="./stylesheet.css" />
+  </head>
+  <body>
+    <section id="main">
+      <div class="display_flex container">
+        <div class="row box1">
+          <h1>Hello World</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Delectus
+            assumenda itaque voluptatum voluptatibus tempore, totam porro culpa
+            possimus alias animi fugit labore! Voluptatibus at nostrum
+            exercitationem distinctio cum, soluta odit. Lorem ipsum dolor sit
+            amet consectetur adipisicing elit. Suscipit consequuntur labore
+            assumenda pariatur laudantium ipsa unde tenetur tempore illo
+            molestias hic, voluptates quidem est quas delectus enim impedit a
+            incidunt! Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+            Dolorem blanditiis, aspernatur consequatur amet sunt iure libero.
+            Deserunt vitae accusantium quo minima voluptate optio modi itaque
+            suscipit voluptatem velit, soluta nihil.
+          </p>
+          <hr />
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+            Laudantium, minima dolore. Saepe dolorum possimus beatae voluptas
+            minima at. Nobis quidem quis mollitia, qui ducimus amet porro error
+            distinctio sapiente labore. Lorem, ipsum dolor sit amet consectetur
+            adipisicing elit. Optio atque nostrum fuga distinctio quam fugiat et
+            animi, recusandae eius, suscipit ex. Facilis delectus adipisci
+            dolores, sed autem eveniet voluptate fugit. Lorem ipsum dolor sit
+            amet consectetur adipisicing elit. Placeat earum amet corporis
+            praesentium rem fuga aliquid ad repudiandae reprehenderit, nesciunt
+            ipsam. Nihil perspiciatis, maiores aut exercitationem laboriosam
+            voluptatibus natus eveniet.
+          </p>
         </div>
       </div>
-    </div>
-    <div class="clearfix"></div>
-  </div>
-</body>
-
+      <div class="display_flex container">
+        <div class="row box2">
+          <h1>Some Other World</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quod
+            cupiditate quisquam iusto assumenda repudiandae fugiat quaerat eos
+            architecto cumque delectus? Rem, ad? Nam quo, enim odit eos qui rem
+            asperiores. Lorem ipsum dolor, sit amet consectetur adipisicing
+            elit. Molestiae fuga quisquam quos itaque nihil hic commodi,
+            repudiandae ex debitis corrupti eius temporibus. Officia id
+            perspiciatis beatae, neque sequi temporibus dicta.
+          </p>
+        </div>
+      </div>
+      <div class="display_flex container">
+        <div class="row category">
+          <h1>Categories</h1>
+          <ul>
+            <li><a href="#">Category 1</a></li>
+            <li><a href="#">Category 2</a></li>
+            <li><a href="#">Category 3</a></li>
+            <li><a href="#">Category 4</a></li>
+            <li><a href="#">Category 5</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="display_flex container">
+        <div class="row display_flex my-form">
+          <div class="display_flex form-group">
+            <label for="name">Name: </label>
+            <input
+              type="text"
+              id="name"
+              placeholder="Please input your name"
+              required
+            />
+          </div>
+          <div class="display_flex form-group">
+            <label for="email">Email: </label>
+            <input
+              type="text"
+              id="email"
+              placeholder="Please input your email"
+              required
+            />
+          </div>
+          <div class="display_flex form-group">
+            <label for="message">Message: </label>
+            <textarea
+              name="Message"
+              id="message"
+              cols="30"
+              rows="10"
+              placeholder="Please type your message here"
+            ></textarea>
+          </div>
+          <div class="display_flex form-group">
+            <input type="button" class="button" value="Submit" />
+          </div>
+        </div>
+      </div>
+      <div class="display_flex container">
+        <div class="row display_flex three-container-wrapper">
+          <div class="small-container">
+            <h3>Headings</h3>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+              Distinctio, laudantium harum. Pariatur quaerat unde consectetur,
+              reprehenderit dolore cum? Corporis iusto nam maiores quas at iure
+              voluptates, exercitationem sed vel esse.
+            </p>
+          </div>
+          <div class="small-container">
+            <h3>Headings</h3>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+              Distinctio, laudantium harum. Pariatur quaerat unde consectetur,
+              reprehenderit dolore cum? Corporis iusto nam maiores quas at iure
+              voluptates, exercitationem sed vel esse.
+            </p>
+          </div>
+          <div class="small-container">
+            <h3>Headings</h3>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+              Distinctio, laudantium harum. Pariatur quaerat unde consectetur,
+              reprehenderit dolore cum? Corporis iusto nam maiores quas at iure
+              voluptates, exercitationem sed vel esse.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+  </body>
 </html>
